Bug 422047 - "Get new <addon>" windows say "Loading more..." while an addon is updated if "Updateable only" filter is selected
Summary: "Get new <addon>" windows say "Loading more..." while an addon is updated if ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-25 11:30 UTC by Patrick Silva
Modified: 2020-08-11 18:29 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.73
Sentry Crash Report:


Attachments
screenshot (264.19 KB, image/png)
2020-05-25 11:30 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-05-25 11:30:11 UTC
Created attachment 128764 [details]
screenshot

STEPS TO REPRODUCE
1. open a "Get new <addon>" window when an addon update is available
2. select "Updateable only" option in the second dropdown on bottom
3. hover over any updateable addon and click on its "Update" button

OBSERVED RESULT
"Get new <addon>" window says "Loading more..." on bottom while the addon is updated. See the attached screenshot please.

EXPECTED RESULT
"Loading more..." should not appear while the addon is updated.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 1 Alexander Lohnau 2020-07-16 19:38:14 UTC
This also appears when installing a new plugin. But in most cases the spinner is not shown, because the list of results is full. You can try this out by searching for "matrix kde" and install the one result.
Comment 2 Bug Janitor Service 2020-07-16 20:10:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/12
Comment 3 Alexander Lohnau 2020-08-11 18:29:34 UTC
Git commit 24d8b7c2fa5ea81d9b8322fa730de7f3b30a94f0 by Alexander Lohnau.
Committed on 11/08/2020 at 18:29.
Pushed by alex into branch 'master'.

Hide load more spinner while updating/installing
FIXED-IN: 5.73

The isLoadingData state was always set to true when the busy signal gets
emitted. But in the case of an installation there is no data in the
sense of more entries loaded, consequently we don't need to show the
spinner.

Because of that this MR introduces a new API which tells exactly what operations are currently running.

M  +1    -1    src/core/CMakeLists.txt
M  +59   -11   src/core/engine.cpp
M  +74   -0    src/core/engine.h
M  +9    -3    src/qtquick/quickitemsmodel.cpp

https://invent.kde.org/frameworks/knewstuff/commit/24d8b7c2fa5ea81d9b8322fa730de7f3b30a94f0