src/qtquick/quickitemsmodel.cpp
@@ -46,9 +46,15 @@ public:
             return false;
         }
         model = new KNSCore::ItemsModel(coreEngine, q);
-
-        q->connect(coreEngine, &KNSCore::Engine::signalBusy, q, [=](){ isLoadingData = true; emit q->isLoadingDataChanged(); });
-        q->connect(coreEngine, &KNSCore::Engine::signalIdle, q, [=](){ isLoadingData = false; emit q->isLoadingDataChanged(); });
+        q->connect(coreEngine, &KNSCore::Engine::busyStateChanged, q, [=](){
+            // If we install/update an entry the spinner should be hidden, BUG: 422047
+            const KNSCore::Engine::BusyState state = coreEngine->busyState();
+            const bool busy = state && !state.testFlag(KNSCore::Engine::BusyOperation::InstallingEntry);
+            if (isLoadingData != busy) {
+                isLoadingData = busy;
+                Q_EMIT q->isLoadingDataChanged();
+            }
+        });
 
         q->connect(coreEngine, &KNSCore::Engine::signalProvidersLoaded, coreEngine, &KNSCore::Engine::reloadEntries);
         // Entries have been fetched and should be shown:
